components/coder/coder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coder
  namespace: coder
  labels:
    app: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coder
  template:
    metadata:
      labels:
        app: coder
    spec:
      serviceAccountName: coder
      containers:
        - name: coder
          image: ghcr.io/coder/coder:latest
          ports:
            - containerPort: 7080
              name: http
          livenessProbe:
            httpGet:
              path: /api/v2
              port: 7080
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /api/v2
              port: 7080
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: home
              mountPath: /home/coder
              subPath: coder/home
      volumes:
        - name: home
          persistentVolumeClaim:
            claimName: coder-nfs
