components/coder/coder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: coder
  labels:
    app: coder
spec:
  type: ClusterIP
  selector:
    app: coder
  ports:
    - port: 7080
      targetPort: 7080
      protocol: TCP
      name: http
