components/coder/coder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coder
  namespace: coder
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    higress.io/domain: "coder.nhome.local,coder.bestnathan.top"
spec:
  ingressClassName: higress
  rules:
    - host: coder.nhome.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 7080
    - host: coder.bestnathan.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coder
                port:
                  number: 7080
